# PalliCalc

./: .gitignore  Opioid Usage Analysis_ Semmelweis University.md  Opioid_opiate conversion tables – switching between opioid medicines _ Right Decisions.html  PRD.md  README.md  clinical_data_reference.md  clinical_verification_guide.md  commands.md  frontend_specification.md  hosting_guide.md  implementation_plan.md  index.html  manifest.webmanifest  new_input.md  prd_changes.md  registerSW.js  requirements_gap_analysis.md  sw.js  ultimate_PRD.md  user_requirements.md
.claude/: CLAUDE.md
assets/: index-C7prNzy2.js  index-CRxSAgF3.css  index-CSTiyvG5.js  index-Dng5ZD7s.css  index-l5KNOD_u.js  index-uMJnicgs.css
docs/: index.html  manifest.webmanifest  sw.js
docs/assets/: index-BarBIJzR.js  index-C48AT46b.css  index-DDQULmnR.css  index-DhrI9izt.css  index-ywF680bh.js
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend-v2/: index.html  package-lock.json  package.json  vite.config.ts
frontend-v2/src/: App.tsx
frontend-v2/src/i18n/: LanguageContext.tsx  en.ts  hu.ts
frontend-v2/src/lib/: conversions.ts  drug-database.ts  formatting.ts  patch-calculator.ts  tablet-rounding.ts  types.ts  warnings.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: CurrentRegimen.tsx  LanguageToggle.tsx  PatientParameters.tsx  ResultsDisplay.tsx  TargetRegimen.tsx
ome_core/: pyproject.toml
ome_core/src/ome_core/: __init__.py  conversions.py
ome_core/tests/: test_conversions.py
(+18 files in other folders)
