[project]
name = "ome-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Juleesss", email = "gyuszkob@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
